<resources>
    <string name="app_name">供销好买</string>
    <string name="no_network">无网络连接</string>
    <string name="connect_server_error">连接服务器失败</string>
    <string name="lab_login_enter_phone">请输入手机号码</string>
    <string name="lab_login_enter_password">请输入登录密码</string>
    <string name="label_phone_iseorr">手机号格式不对</string>

    <string name="lab_login">登&#160;录</string>
    <string name="lab_login_regist">免费注册</string>
    <string name="title_regist">注册</string>
    <string name="lab_login_forget">忘记密码</string>
    <string name="label_again_get">重新发送\n(</string>
    <string name="seconds_later_can_get_vcode">%s</string>
    <string name="register_code_agin">获取验证码</string>
    <string name="title_login">登录</string>
    <string name="lab_login_password_error">密码错误超过5次，请完成图形验证</string>
    <string name="lab_login_imagecode">请输入图形验证码</string>
    <string name="lab_register_code">获取验证码</string>
    <string name="lab_register_msg_code">请输入收到的短信验证码</string>
    <string name="lab_register_agree">同意</string>
    <string name="lab_register_protocol">供销好卖网用户协议 用户隐私政策</string>
    <string name="lab_register_next">下一步</string>
    <string name="lab_set_password">请输入密码</string>
    <string name="lab_set_again_password">请再次输入新密码</string>
    <string name="lab_setpassword_complete">完&#160;&#160;成</string>
    <string name="lab_setpassword_hint">请使用6-12位，数字、字母、符号两种以上组合设置密码</string>
    <string name="lab_center_shopcart">购物车</string>
    <string name="lab_center_collect">店铺收藏</string>
    <string name="lab_center_footmark">足迹</string>
    <string name="look_me_order">查看全部订单</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_send">待发货</string>
    <string name="wait_charge">待收货</string>
    <string name="wait_evaluation">待评价</string>
    <string name="after_sales">售后</string>
    <string name="lab_center_phone_fare">话费充值</string>
    <string name="lab_center_broadband">宽带续费</string>
    <string name="lab_center_data">数据军师</string>
    <string name="lab_center_client">我的客户</string>
    <string name="lab_center_order">客户订单</string>
    <string name="lab_center_work">站长业务</string>
    <string name="lab_center_recommend">我的推荐</string>
    <string name="lab_personal_nick">昵称</string>
    <string name="lab_presonal_id">用户ID</string>
    <string name="lab_personal_sex">性别</string>
    <string name="title_personal">个人信息</string>
    <string name="lab_cneter_address">地址管理</string>
    <string name="lab_center_help">帮助中心</string>
    <string name="lab_center_station_recommend">站长推荐</string>

    <string name="title_set">设置</string>
    <string name="lab_set_change_password">修改密码</string>
    <string name="lab_set_suggest">意见及建议</string>
    <string name="lab_set_movement">推送开关</string>
    <string name="lab_set_clear_images">清除图片缓存</string>
    <string name="lab_set_about">关于供销好卖</string>

    <string name="title_about">关于供销好卖</string>
    <string name="lab_about_user_protocol">用户协议</string>
    <string name="lab_about_xx_protocol">xx协议</string>
    <string name="lab_about_version_msg">版权信息</string>
    <string name="lab_about_soft_protocol">软件许可使用协议</string>

    <string name="title_suggestion">意见及建议</string>
    <string name="lab_suggestion_meg">给我们的意见及建议</string>
    <string name="lab_suggestion_meg_hint">意见及建议</string>
    <string name="lab_suggestion_name">姓名</string>
    <string name="lab_suggestion_phone">电话</string>
    <string name="lab_suggestion_phone_hint">请输入您的手机号码</string>
    <string name="lab_suggestion_name_hint">请输入您姓名</string>
    <string name="lab_suggestion_start">*</string>

    <string name="title_help_center">帮助中心</string>
    <string name="lab_help_auto_service">自动服务</string>
    <string name="lab_help_change_password">修改密码</string>
    <string name="lab_help_to_change">换绑服务人员</string>
    <string name="lab_help_call_station">联系我的站长</string>
    <string name="lab_help_replace_customer_server">退换/售后</string>
    <string name="lab_help_faq">常见问题</string>
    <string name="lab_help_phone_service">电话客服</string>
    <string name="lab_help_online_service">在线客服</string>

    <string name="title_charge">话费充值</string>
    <string name="lab_charge_cancel">取消</string>
    <string name="lab_charge_phone">充话费</string>
    <string name="lab_charge_once">立即充值</string>
    <string name="lab_data_remaining_sum">累计收益(元)</string>
    <string name="lab_data_sum_income">累计收益(元)</string>
    <string name="lab_data_my_bill">我的对账单</string>
    <string name="lab_data_all_income">所有收益一目了然</string>
    <string name="lab_data_detail">详情</string>
    <string name="_209909">下一期对账单(209909期)</string>
    <string name="lab_data_confirm">待确定</string>
    <string name="lab_data_cash">提现</string>
    <string name="lab_data_income_detail">余额明细</string>

    <string name="title_bill">我的对账单</string>
    <string name="lab_bill_filter">筛选</string>
    <string name="lab_bill_all">全部</string>
    <string name="lab_bill_confrim">待确定</string>
    <string name="lab_bill_pend_settle">待结算</string>
    <string name="lab_bill_recall">被撤回</string>
    <string name="lab_bill_dissidence">有异议</string>
    <string name="lab_bill_settled">已结算</string>

    <string name="tittle_billdetail">账单详情</string>
    <string name="lab_billdetail_number">对账单号</string>
    <string name="lab_billdetail_copy">复制单号</string>
    <string name="lab_billdetail_deduct">需扣除费用项目明细</string>
    <string name="lab_billdetail_income">订单收益(元)</string>
    <string name="lab_billdetail_withhold">平台代扣税费(元)</string>
    <string name="lab_billdetail_onther">其他费用(元)</string>
    <string name="lab_billdetail_settle">结算金额</string>
    <string name="lab_billdetail_allcount">订单总数</string>
    <string name="lab_billdetail_detial">查看详情</string>
    <string name="lab_billdetail_foot">账单操作记录</string>
    <string name="lab_billdetail_create">账单被创建</string>
    <string name="lab_billdetail_dissidence">站长提出异议</string>
    <string name="lab_billdetail_dissidence_mesg">异议内容</string>
    <string name="lab_billdetail_dissidence_put">提出异议</string>
    <string name="lab_billdetail_dissidence_confirm">确定账单信息</string>
    <string name="lab_custom_call">联系客户</string>
    <string name="lab_detail_discount">店铺优惠</string>
    <string name="lab_detial_feight">运费(快递)</string>
    <string name="lab_detail_msg">卖家留言</string>
    <string name="lab_detail_allprice">订单总价</string>
    <string name="lab_detail_actualpayment">实付款</string>
    <string name="lab_add_custom_name">客户姓名</string>
    <string name="lab_add_custom_phone">客户电话</string>
    <string name="lab_custom_address">详细地址(不用写省、市、县)</string>
    <string name="lab_bind_recive_name">请填写收货人姓名</string>
    <string name="lab_bind_station_name">站点名称:</string>
    <string name="lab_bind_station_msg">站长信息:</string>
    <string name="lab_bind_phone">请填写收货人手机号码</string>
    <string name="lab_bind_address">请填写服务站下详细收货地址</string>
    <string name="title_custom">我的客户</string>
    <string name="lab_custom_add">新增客户</string>
    <string name="title_add_mycustom">我的客户</string>
    <string name="lab_set_quit">退出当前账号</string>

    <!-- 分类做列表点击跳转位置key -->
    <item name="jumpPos" type="id"></item>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_shop_cart">ShopCartActivity</string>
    <string name="lab_forget_account">账号</string>
    <string name="lab_add_addressdetail">请输入详细收货地址</string>
    <string name="lab_deliverry_name">收货人姓名</string>
    <string name="lab_address_phone">手机号码</string>
</resources>
