<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_back_white"
    android:orientation="vertical"
    tools:context="com.coopbuy.mall.ui.mainpage.activity.LoginActivity">

    <include layout="@layout/title_bar_layout" />


    <RelativeLayout
        style="@style/LinearLayout_contain_edit"
        android:layout_marginTop="@dimen/dimen_px61">

        <EditText
            android:id="@+id/edit_phone"
            style="@style/login_edit"
            android:hint="@string/lab_login_enter_phone" />

        <ImageView
            android:id="@+id/iv_phone_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@mipmap/icon_delete_login_delete" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/LinearLayout_contain_edit"
        android:layout_marginTop="@dimen/dimen_px16">

        <EditText
            android:id="@+id/edit_password"
            style="@style/login_edit"
            android:hint="@string/lab_login_enter_password" />

        <ImageView
            android:id="@+id/iv_password_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dimen_px34"
            android:layout_toLeftOf="@+id/iv_password_show"
            android:src="@mipmap/icon_delete_login_delete" />

        <ImageView
            android:id="@+id/iv_password_show"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@mipmap/icon_eye_login_open" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/login_btn"
        android:layout_marginTop="@dimen/dimen_px300"
        android:text="@string/lab_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_px30"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_login_regist" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_px196"
            android:text="@string/lab_login_forget" />
    </LinearLayout>
</LinearLayout>
