<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:diy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/box"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_back_white"
    android:orientation="vertical"
    tools:context="com.coopbuy.mall.ui.module.center.activity.RegisterActivity">

    <include layout="@layout/title_bar_layout" />

    <com.coopbuy.mall.widget.tab.MyEditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_px100"
        android:layout_marginLeft="@dimen/dimen_px30"
        android:layout_marginRight="@dimen/dimen_px30"
        android:layout_marginTop="@dimen/dimen_px60"
        android:background="@color/edit_text_back_white"
        android:gravity="center"
        android:maxLength="11"
        diy:dotVisible="true"
        diy:hint="@string/lab_login_enter_phone"
        diy:inputType="3"
        diy:text=""
        diy:textColor="@color/black_4" />

    <RelativeLayout
        style="@style/LinearLayout_contain_edit_no_padding"
        android:layout_marginTop="@dimen/dimen_px61">

        <com.coopbuy.mall.widget.tab.MyEditText
            android:id="@+id/edt_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_px100"
            android:layout_toLeftOf="@+id/v_divid"
            android:background="@color/edit_text_back_white"
            android:gravity="center"
            android:maxLength="6"
            diy:dotVisible="true"
            diy:hint="@string/lab_register_msg_code"
            diy:inputType="3"
            diy:text=""
            diy:textColor="@color/black_4" />

        <View
            android:id="@+id/v_divid"
            android:layout_width="@dimen/dimen_px2"
            android:layout_height="@dimen/dimen_px80"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tv_get_code"
            android:background="@color/theme_text_lab_black" />

        <TextView
            android:id="@+id/tv_get_code"
            style="@style/text_theme_black_size_30_h_match_41495c"
            android:layout_width="@dimen/dimen_px210"
            android:layout_alignParentRight="true"
            android:text="@string/lab_register_code" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_px35"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen_px30"
        android:layout_marginTop="@dimen/dimen_px24"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="@dimen/dimen_px30"
            android:layout_height="@dimen/dimen_px30"
            android:layout_gravity="center"
            android:background="@drawable/check_agree_selector"
            android:button="@null"
            android:checked="true" />

        <TextView
            style="@style/text_black_gary_size_26_666666"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dimen_px9"
            android:text="@string/lab_register_agree" />


        <TextView
            android:id="@+id/tv_protocol"
            style="@style/text_orange_size_26_f"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dimen_px30"
            android:text="@string/lab_register_protocol" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/login_btn"
        android:layout_marginTop="@dimen/dimen_px151"
        android:text="@string/lab_register_next" />
</LinearLayout>
